# oiyshTerminal

./: .otdm  OTDM_Termux.md  README.md  bTest1  deb_stats.odg  example_DEBIAN_otdm  example_DEBIAN_otdm_2  gdb_export_test1.json  gdb_export_test1_modDBFromUidToName.json  gdb_export_test2.json  gdb_export_test4.json  gdb_export_test4_modDSFromUidToName.json  gdb_export_test4_modDSFromUidToName.json_res  gdb_export_test4_modDSFromUidToName_nice.json  gdb_export_test4_modDSFromUidToName_nice_injRes.json  jsdoc.json  otdm-installer-dummy_0.1-1_all  otdm-tools_0.12-1_all  otdm-ubuntu-vanilla-install.md  otdm-yss_0.1.1-2_all.deb  otdm2Wiki.sh  otdm2WikiFromStart.sh  otdm2jsdocs.sh  otdm2pydocTemplate.py  otdm2yssSiteDebian_postinst  otdm2yssSiteDebian_prerm  otdm2yssSites.sh  otdmBuildAllToRepo.sh  otdmBuildAllWith.sh  otdmBuildList.sh  otdmBuildYssSitesList.sh  otdmMake.sh  otdmMakeDeb.sh  otdmREADME.txt  otdmRepoUpdate.sh  otdm_dependencies.html  otdm_dependencies.odg  otdm_dependencies_0.2.odg  otdmpFromP.sh  package.json  (+5 more)
.github/: FUNDING.yml
OTDM/: Release  otdm-cmqtt2mysql_0.1.50-46_all.deb  otdm-cmqtt2mysql_0.1.50-47_all.deb  otdm-cmqtt2mysql_0.1.50-48_all.deb  otdm-cmqtt2mysql_0.1.50-49_all.deb  otdm-cmqtt2mysql_0.1.50-50_all.deb  otdm-cmqtt2mysql_0.1.50-51_all.deb  otdm-cmqtt2mysql_0.1.50-52_all.deb  otdm-db-init-dummy_0.1-3_all.deb  otdm-db-init-dummy_0.1-4_all.deb  otdm-db-init-dummy_0.1-5_all.deb  otdm-db-init-dummy_0.1-6_all.deb  otdm-db-init-dummy_0.1-7_all.deb  otdm-db-init-dummy_0.1-8_all.deb  otdm-db-init_0.1.12-45_all.deb  otdm-db-init_0.1.12-46_all.deb  otdm-db-init_0.1.12-47_all.deb  otdm-db-init_0.1.12-48_all.deb  otdm-db-init_0.1.12-49_all.deb  otdm-db-init_0.1.19-55_all.deb  otdm-db-init_0.1.21-47_all.deb  otdm-db-init_0.1.21-48_all.deb  otdm-db-init_0.1.21-49_all.deb  otdm-db-init_0.1.21-50_all.deb  otdm-db-init_0.1.21-52_all.deb  otdm-grafana-btzoom_0.0.1-1_all.deb  otdm-grafana-ds-MySql_0.22.17-59_all.deb  otdm-grafana-ds-MySql_0.22.17-60_all.deb  otdm-grafana-ds-MySql_0.22.17-61_all.deb  otdm-grafana-ds-MySql_0.22.17-62_all.deb  otdm-grafana-ds-MySql_0.22.17-63_all.deb  otdm-grafana-ds-MySql_0.22.17-64_all.deb  otdm-installer-dummy_0.1-10_all.deb  otdm-installer-dummy_0.1-11_all.deb  otdm-installer-dummy_0.1-12_all.deb  otdm-installer-dummy_0.1-14_all.deb  otdm-installer-dummy_0.1-1_all.deb  otdm-installer-dummy_0.1-2_all.deb  otdm-installer-dummy_0.1-3_all.deb  (+211 more)
OTPIPS/ot_auto1/: README.md  README_xdoc.md  pyproject.toml
OTPIPS/ot_auto1/src/ot_auto1/: __init__.py  example.py
OTPIPS/ot_blank/: LICENSE.txt  README.md  pyproject.toml
OTPIPS/ot_blank/src/ot_blank/: __init__.py  example.py
OTPIPS/ot_blank/src/ot_test2/: __init__.py
OTPIPS/ot_my_libs/: LICENSE.txt  README.md  README_xdoc.md  pyproject.toml
OTPIPS/ot_my_libs/src/ot_my_libs/: ArgsParse.py  FileActions.py  MyCalculate.py  PlugsHelper.py  PlugsHelperTest_plug1_a.py  PlugsHelperTest_plug2_a.py  PlugsHelperTest_plug3_a.py  TimeHelper.py  XMLHelper.py  __init__.py  db_helper.py  example.py  myFastPlot.py  myLoger.py  myMqttClient.py  mysql_helper.py
OTPIPS/ot_test2/: README.md  pyproject.toml
OTPIPS/ot_test2/src/ot_test2/: example.py
OTPIPS/ot_test_scrip1/: README.md  pyproject.toml
OTPIPS/ot_test_scrip1/src/ot_test_scrip1/: runner.py
(+804 files in other folders)
