[project]
name = "ot_auto1"
version = "0.0.7"
authors = [
  { name="Bartłomiej Ceglik", email="yoyek@wp.pl" },
]
description = "It's a ot_auto1 package / test. A small test of oiyshTerminal to pip."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/yOyOeK1/oiyshTerminal/tree/main/OTPIPS/ot_auto1"
"Bug Tracker" = "https://github.com/yOyOeK1/oiyshTerminal/issues/ot_auto1"
