[project]
name = "ot_blank"
version = "0.0.7"
authors = [
  { name="Name LastName", email="email@res.com" },
]
description = "It's a ot_blank package / test. A small test of oiyshTerminal to pip."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/yOyOeK1/oiyshTerminal/tree/main/OTPIPS/ot_blank"
"Bug Tracker" = "https://github.com/yOyOeK1/oiyshTerminal/issues/ot_blank"
